--- a/FitNesseRoot/ErrorSuite.wiki
+++ b/FitNesseRoot/ErrorSuite.wiki
@@ -1,5 +1,10 @@
 This will return in an empty XML result
 
-!|Suite             |
-|Page |FibonacciTest|
-|Title|             |
+
+!|Suite | 
+|Page |FibonacciTest| 
+|Title|.* |
+
+!|Suite | 
+|Page |GameManagementSuite| 
+|Title|.* |
